# acapy-json-ld-receiver

./: Dockerfile  README.md  openapi.json  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
integration/: Dockerfile  docker-compose.yml  pyproject.toml
integration/tests/: test_anoncreds.py  test_json_ld.py
scripts/: generate-models.sh  retrieve-openapi.sh
src/: __init__.py  models.py  others.py
