[tool.poetry]
name = "acapy-webhook-example"
version = "0.1.0"
description = "Example ACA-Py Webhook Receiver"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.1"
uvicorn = {version = "^0.17.6", optional = true}
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"

[tool.poetry.extras]
server = ["uvicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
