[tool.poetry]
name = "acapy-webhook-example"
version = "0.1.0"
description = "Example ACA-Py Webhook Receiver"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {version = "^0.17.6", optional = true}
pydantic = "^1.9.0"
controller = {git = "https://github.com/indicio-tech/acapy-minimal-example.git"}

[tool.poetry.dev-dependencies]
black = "^24.1.1"
pre-commit = "^2.18.1"
ruff = "^0.1.2"

[tool.poetry.extras]
server = ["uvicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
]

# The models module is generated
extend-exclude = ["src/models.py"]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
